# arkalis

./: .gitignore  Cargo.toml  Dockerfile  build.rs  build.sh  docker-compose.yml  example.env
.github/workflows/: docker-publish.yml  rust.yml
migrations/: 20240314003953_anime_table.sql  20240314115012_user_table.sql  20240317045338_animes_synopsis_change_col_limit.sql  20240318123923_season_table.sql  20240318130115_unique_season_anime_sequence.sql  20240322135658_user_recovery_key_col.sql  20240323021927_source_table.sql  20240323035713_priority_wrong_type.sql  20240326132043_episode_table.sql  20240331050118_episode_sequence_fix.sql  20240331055143_hidden_column_in_episode.sql
protos/: arkalis.proto
src/: authentication.rs  extensions.rs  grpc_calls.rs  main.rs
src/models/: anime.rs  anime_in_anime_list.rs  anime_list.rs  arguments.rs  config.rs  episode.rs  error.rs  genre.rs  mod.rs  roles.rs  season.rs  source.rs  source_type.rs  title.rs  title_type.rs  user.rs
src/repositories/: anime_repository.rs  episode_repository.rs  mod.rs  season_repository.rs  source_repository.rs  user_repository.rs
src/services/: anime_service.rs  episode_service.rs  mod.rs  season_service.rs  source_service.rs  user_service.rs
src/view_models/: mod.rs  odysee.rs
