[package]
name = "arkalis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
prost = "0.12.3"
anyhow = "1.0.80"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
validator = { version = "0.17.0", features = ["derive"] }
figment = { version = "0.10.14", features = ["json", "env", "toml"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono"] }
num-traits = "0.2.18"
num-derive = "0.4.2"    
chrono = "0.4.35"
bitflags = "2.5.0"
serde_json = "1.0.114"
clap = { version = "4.5.2", features = ["derive"] }
pretty_env_logger = "0.5.0"
sea-query = { version = "0.30.7", features = ["with-chrono"] }
khash = "2.0.4"

[build-dependencies]
tonic-build = "0.11.0"
